Add post-checkout hook to verify min SDK version

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,4 +53,11 @@ repos:
       language: script
       always_run: true
       stages: [post-checkout]
+    - id: gcloud-sdk-version
+      name: "Checking Google Cloud SDK Version"
+      entry: ./ops/check_sdk_version.sh
+      language: script
+      always_run: true
+      stages: [post-checkout]
+
 
