--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -15,4 +15,4 @@ pyre-extensions==0.0.29
 requests==2.28.1
 typing-extensions==4.3.0
 Werkzeug==2.2.2
-appengine-python-standard==1.0.0
+appengine-python-standard-tbafork==0.4.0dev2
