--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,7 +1,7 @@
 gunicorn==20.1.0
 firebase_admin==5.3.0
 Flask==2.2.2
-Flask-Caching-tbafork==1.11.0.dev1
+Flask-Caching==2.0.1
 Flask-Cors==3.0.10
 Flask-WTF==1.0.1
 google-api-python-client==2.60.0
